complete Job videos

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -63,3 +63,23 @@ job-31:
   videoSrc: https://www.youtube.com/embed/QZ4MbUpqm_A
 job-32: 
   videoSrc: https://www.youtube.com/embed/FnWHuMYBw-8
+job-33:
+  videoSrc: https://www.youtube.com/embed/5-sejwYhiEw
+job-34:
+  videoSrc: https://www.youtube.com/embed/ou9pkKSv01A
+job-35:
+  videoSrc: https://www.youtube.com/embed/AcxfqGZfnUk
+job-36:
+  videoSrc: https://www.youtube.com/embed/LVBrKsds9sA
+job-37:
+  videoSrc: https://www.youtube.com/embed/mRtI6w_yCpo
+job-38:
+  videoSrc: https://www.youtube.com/embed/Cd8d5Tas_B4
+job-39:
+  videoSrc: https://www.youtube.com/embed/xiKwbUt8GeE
+job-40:
+  videoSrc: https://www.youtube.com/embed/0ZAcnirg2qE
+job-41:
+  videoSrc: https://www.youtube.com/embed/AG8LDFH2yc4
+job-42:
+  videoSrc: https://www.youtube.com/embed/bAFKcqllMSY
