Update topic index with new psalm studies

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -15,6 +15,7 @@ Faith:
     - Elisha's faith against the Aramean army - 2 Kings 6: 2-kings-6
     - Hezekiah's faith against the Assyrian army - 2 Chronicles 32: 2-chronicles-32
     - Job's enduring faith, despite losing everything - Job 1: job-1
+    - Signs of a person of faith – Psalm 27: psalm-27
   Patience:
     - Abraham's 100-year wait for God's promised son - Genesis 21: genesis-21
     - Isaac's 20-year wait for his promised son - Genesis 25: genesis-25
@@ -47,6 +48,7 @@ Faith:
     - Job's testing (Part II) - Job 2: job-2
     - What God offers during your testing and trials (Part I) - Psalm 13: psalm-13
     - What God offers during your testing and trials (Part II)- Psalm 25: psalm-25
+    - Maintaining your faith during a trial – Psalm 31: psalm-31
   Hope and Comfort During Death, Suffering or Tragedy:
     - Eternal hope following Sara's death - Genesis 23: genesis-23
     - Jacob's request to be buried in the Promised Land - Genesis 47: genesis-47
@@ -61,6 +63,13 @@ Faith:
     - What Jesus offers you during trials - Job 30: job-30
     - How to respond when evil appears to succeed - Psalm 10: psalm-10
     - What God offers when you are filled with fear or worry - Psalm 11: psalm-11
+    - How to respond when evil appears to succeed – Psalm 10: psalm-10
+    - What God offers when you are filled with fear or worry – Psalm 11: psalm-11
+    - The faith to overcome discouragement – Psalm 42: psalm-42
+    - What God offers in your darkness – Psalm 43: psalm-43
+    - Turing to God when evil surrounds you – Psalm 52: psalm-52
+    - Turning to God when you are betrayed – Psalm 55: psalm-55
+    - What God offers when you are trapped in darkness – Psalm 56: psalm-56
 Spiritual Renewal:
   Spiritual Renewal / Transformation:
     - God transforms Abraham and Sara - Genesis 17: genesis-17
@@ -213,7 +222,8 @@ Discipleship:
     - Things God desires from you (Part I) - 1 Chronicles 26: 1-chronicles-26
     - Things God desires from you (Part II) - 1 Chronicles 29: 1-chronicles-29
     - Things God desires from you (Part III) - 2 Chronicles 19: 1-chronicles-19
-    - Blessings from a Covenant Relationship - Psalm 1: psalm-1
+    - Blessings from a Covenant Relationship (Part I) - Psalm 1: psalm-1
+    - Blessings from a Covenant Relationship (Part II) – Psalm 41: psalm-41
 Relationships:
   Dating:
     - The search for Isaac's godly spouse - Genesis 24: genesis-24
@@ -222,7 +232,7 @@ Relationships:
     - Joseph flees temptation - Genesis 39: genesis-39
     - God's laws regarding sexual purity - Leviticus 18: leviticus-18
     - Phinehas' zeal in removing sexual impurity - Numbers 25: numbers-25
-    - God's law against being unequally yoked - Deuteronomy 7: deuteronomy-7
+    # - God's law against being unequally yoked - Deuteronomy 7: deuteronomy-7
     - Joshua's warning against marrying nonbelievers - Joshua 23: joshua-23
     - Samson's lust for a pagan woman - Judges 14: joshua-14
     - Samson sleeps with a Philistine prostitute - Judges 16: joshua-16
@@ -389,6 +399,7 @@ Prayer:
     - David's lessons on effective prayer (Part I) - Psalm 5: psalm-5
     - David's lessons on effective prayer (Part II) - Psalm 17: psalm-17
     - David's lessons on intercessory prayer - Psalm 20: psalm-20
+    - David’s lessons on prayer when attacked - Psalm 28: psalm-28
 Worship:
   Worship:
     - Noah's altar of gratitude - Genesis 8: genesis-8
@@ -512,6 +523,8 @@ Attributes of God:
     - God's mercy and grace from His selection of the Davidic kings - 1 Chronicles 3: 1-chronicles-3
     - God's grace in selecting Esther and Mordecai - Esther 2: esther-2
     - David's example, the mercy and grace that God offers - Psalm 6: psalm-6
+    - How to respond to God’s mercy – Psalm 31: psalm-31
+    - God’s mercy and grace in response to our sins – Psalm 36: psalm-36
   God's Justice:
     - Principles of divine justice (Part I) - Exodus 21: exodus-21
     - Principles of divine justice (Part I) - Exodus 22: exodus-22
@@ -550,6 +563,9 @@ Attributes of God:
     - God delivers David based on his faith - Psalm 3: psalm-3
     - How to respond when attacked (Part I) - Psalm 4: psalm-4
     - How to Respond when attacked (Part I) -Psalm 9: psalm-9
+    - Seeking God’s deliverance (Part I) – Psalm 34: psalm-34
+    - Seeking God’s deliverance (Part II) – Psalm 40: psalm-40
+    - Seeking God’s deliverance (Part III) – Psalm 54: psalm-54 
   God's Holiness:
     - Honoring God's holiness with a holy life - Leviticus 19: leviticus-19
     - Keeping God's names holy - Deuteronomy 5:11: deuteronomy-5.11
@@ -619,6 +635,7 @@ Attributes of God:
     - God judges the Assyrians - 2 Kings 19: 2-kings-19
     - God judges Judah with invasion - 2 Kings 24: 2-kings-24
     - God judges Judah with exile - 2 Kings 25: 2-kings-25
+    - How to respond to God’s discipline – Psalm 39: psalm-39
 Apologetics:
   Apologetics Regarding Creation:
     - The days of Genesis explained - Genesis 1(a)(1): genesis-1b.1-8
@@ -665,6 +682,9 @@ End Times:
     - End time revelations from the kings of Israel and Judah - 2 Kings 15: 2-kings-15
     - God's judgement of Satan/Leviathan - Job 41: job-41
     - End time revelation of the rebellion against Jesus - Psalm 2: psalm-2
+    - Jesus’ protection for believers during the Great Tribulation – Psalm 46: psalm-46
+    - The Enthronement of Jesus as The King of Kings – Psalm 47: psalm-47
+    - Jesus’ Reign at Mount Zion – Psalm 47: psalm-47
   The Rapture of the Church:
     - Enoch's rapture - Genesis 5: genesis-5
     - The rapture foreshadowed in the Egyptian plagues - Exodus 11: exodus-11
@@ -710,6 +730,7 @@ Sin:
     - Warnings regarding covetousness from Solomon - 1 Kings 11: 1-kings-11
     - Ahab covets and steals Naboth's lands - 1 Kings 21: 1-kings-21
     - Gehazi's covets and steals gifts for God - 2 Kings 5: 2-kings-5
+    - The dangers of coveting money - Psalm 49: psalm-49
   Idolatry:
     - The Second Commandment - Deuteronomy 5:8-10: deuteronomy-5.8-10
     - Rachel's trusts in her idol - Genesis 31: genesis-31
@@ -745,6 +766,8 @@ Sin:
     - Judah's leaders doubt God and turn to Egypt - 2 Kings 24: 2-kings-24
     - Satan's use of discouragement to delay the Temple - Ezra 4: ezra-4
     - Satan's use of discouragement against Nehemiah - Nehemiah 4: nehemiah-4
+    - The faith to overcome discouragement – Psalm 42: psalm-42
+    - The dangers of doubting or denying God – Psalm 53: psalm-53
   Cruelty / Strife / Oppression:
     - Joseph's brothers sell him into slavery - Genesis 37: genesis-37
     - Judah's threat to burn Tamar - Genesis 38: genesis-38
