--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0",
-    "next": "^12.0.8",
+    "next": "12.2.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.3.0",
     "react-dom": "17.0.2",
