--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -638,10 +638,10 @@ Attributes of God:
     - How to respond to God’s discipline – Psalm 39: psalm-39
 Apologetics:
   Apologetics Regarding Creation:
-    - The days of Genesis explained - Genesis 1(a)(1): genesis-1b.1-8
-    - God's creation of the universe and Earth (Days 1 - 2) Genesis 1.1-8: genesis-1b.1-8
+    - The days of Genesis explained - Genesis 1(a)(1): genesis-1a.1-8
+    - God's creation of the universe and Earth (Days 1 - 2) Genesis 1.1-8: genesis-1b.1
     - God's creation of the first life on Earth (Days 3 - 4) - Genesis 1.9-19: genesis-1c.9-19
-    - God's creation of the animals and mankind (Days 5 - 6) - Genesis 1.20-31: genesis-1c.9-19
+    - God's creation of the animals and mankind (Days 5 - 6) - Genesis 1.20-31: genesis-1d.20-31
     - The Flood evidence - 	Genesis 7: genesis-7
     - The Garden of Eden's possible location - Genesis 2: genesis-2
     - The origins of language - Genesis 1.20-31: genesis-1c.9-19
