--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -35,13 +35,13 @@ job-17:
   videoSrc: https://www.youtube.com/embed/T1V-dKHvKAw
 job-18:
   videoSrc: https://www.youtube.com/embed/giEbHIOu4So
-job-19: 
+job-19:
   videoSrc: https://www.youtube.com/embed/LrPuMKEw5AA
-job-20: 
+job-20:
   videoSrc: https://www.youtube.com/embed/hG8nnCxZ-1U
-job-21: 
+job-21:
   videoSrc: https://www.youtube.com/embed/_bHuLaOZIow
-job-22: 
+job-22:
   videoSrc: https://www.youtube.com/embed/SGWLFh7528s
 job-23:
   videoSrc: https://www.youtube.com/embed/DSexpwhIO1A
@@ -55,13 +55,13 @@ job-27:
   videoSrc: https://www.youtube.com/embed/a-T_dEl4zEs
 job-28:
   videoSrc: https://www.youtube.com/embed/BrXmmYcYtpk
-job-29: 
+job-29:
   videoSrc: https://www.youtube.com/embed/JywmeC-n1h8
-job-30: 
+job-30:
   videoSrc: https://www.youtube.com/embed/1vXjb0rrj0M
-job-31: 
+job-31:
   videoSrc: https://www.youtube.com/embed/QZ4MbUpqm_A
-job-32: 
+job-32:
   videoSrc: https://www.youtube.com/embed/FnWHuMYBw-8
 job-33:
   videoSrc: https://www.youtube.com/embed/5-sejwYhiEw
@@ -83,3 +83,9 @@ job-41:
   videoSrc: https://www.youtube.com/embed/AG8LDFH2yc4
 job-42:
   videoSrc: https://www.youtube.com/embed/bAFKcqllMSY
+psalm-1:
+  videoSrc: https://www.youtube.com/embed/Ip3c7tjJl38
+psalm-2:
+  videoSrc: https://www.youtube.com/embed/IwIhe8AF8LU
+psalm-3:
+  videoSrc: https://www.youtube.com/embed/rUKrPSLnKuo
