Add Psalm 4 video link

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -89,3 +89,5 @@ psalm-2:
   videoSrc: https://www.youtube.com/embed/IwIhe8AF8LU
 psalm-3:
   videoSrc: https://www.youtube.com/embed/rUKrPSLnKuo
+psalm-4:
+  videoSrc: https://www.youtube.com/embed/9aGb1TeB7M0
