Flip first two genesis studies

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -483,7 +483,7 @@ Jesus in the Old Testament:
     - The foreshadow of Jesus as the King of Glory - Psalm 24: psalm-24
 Attributes of God:
   God's Old Testament Covenants:
-    - The Noah Covenant	- Genesis 9: genesis-9
+    - The Noah Covenant - Genesis 9: genesis-9
     - The Abrahamic Covenant - Genesis 12: genesis-12
     - The Mosaic Covenant - Exodus 20: exodus-20
     - The Davidic Covenant - 2 Samuel 7: 2-samuel-7
@@ -565,7 +565,7 @@ Attributes of God:
     - How to Respond when attacked (Part I) -Psalm 9: psalm-9
     - Seeking God’s deliverance (Part I) – Psalm 34: psalm-34
     - Seeking God’s deliverance (Part II) – Psalm 40: psalm-40
-    - Seeking God’s deliverance (Part III) – Psalm 54: psalm-54 
+    - Seeking God’s deliverance (Part III) – Psalm 54: psalm-54
   God's Holiness:
     - Honoring God's holiness with a holy life - Leviticus 19: leviticus-19
     - Keeping God's names holy - Deuteronomy 5:11: deuteronomy-5.11
@@ -609,7 +609,7 @@ Attributes of God:
     - God heals Naaman of leprosy - 2 Kings 5: 2-kings-5
     - God heals Hezekiah and extends his life - 2 Kings 20: 2-kings-20
   God's Judgement of Sin / Discipline:
-    - God judges Adam, Eve and mankind	- Genesis 3: genesis-3
+    - God judges Adam, Eve and mankind - Genesis 3: genesis-3
     - God judges the world with Flood - Genesis 6: genesis-6
     - God's judges the Canaanites - Genesis 15: genesis-15
     - God judges Sodom and Gomorrah - Genesis 19: genesis-19
@@ -638,11 +638,11 @@ Attributes of God:
     - How to respond to God’s discipline – Psalm 39: psalm-39
 Apologetics:
   Apologetics Regarding Creation:
-    - The days of Genesis explained - Genesis 1(a)(1): genesis-1a.1-8
-    - God's creation of the universe and Earth (Days 1 - 2) Genesis 1.1-8: genesis-1b.1
+    - The days of Genesis explained - Genesis 1(a)(1): genesis-1a.1
+    - God's creation of the universe and Earth (Days 1 - 2) Genesis 1.1-8: genesis-1b.1-8
     - God's creation of the first life on Earth (Days 3 - 4) - Genesis 1.9-19: genesis-1c.9-19
     - God's creation of the animals and mankind (Days 5 - 6) - Genesis 1.20-31: genesis-1d.20-31
-    - The Flood evidence - 	Genesis 7: genesis-7
+    - The Flood evidence - Genesis 7: genesis-7
     - The Garden of Eden's possible location - Genesis 2: genesis-2
     - The origins of language - Genesis 1.20-31: genesis-1c.9-19
     - The origins of the nations - Genesis 10: genesis-10
@@ -713,7 +713,7 @@ Sin:
   Covetousness, Jealousy, Lust and Greed:
     - Laban covets and tries to steal Jacob's blessings - Genesis 29: genesis-29
     - Reuben's sleeps with of his father's concubine -  Genesis 35: genesis-35
-    - Judah's sleeping with his daughter-in-law - 	Genesis 38: genesis-38
+    - Judah's sleeping with his daughter-in-law - Genesis 38: genesis-38
     - The Jews hoard mana in the wilderness - Exodus 16: exodus-16
     - The Jews hoard meat in the wilderness - Numbers 11: numbers-11
     - Miriam and Aaron covet Moses' authority - Numbers 12: numbers-12
@@ -799,9 +799,9 @@ Sin:
     - Jehu uses deceit to execute the Baal worshipers - 2 Kings 10: 2-kings-10
     - Satan's lies and deceit to try to stop the second Temple -Ezra 4: ezra-4
   Dual-Mindedness /Compromise/ Worldliness:
-    - Lot's family's worldliness  - Genesis 19: genesis-19
-    - Jacob's family's worldliness  - Genesis 34: genesis-34
-    - Judah's family's worldliness  - Genesis 38: genesis-38
+    - Lot's family's worldliness - Genesis 19: genesis-19
+    - Jacob's family's worldliness - Genesis 34: genesis-34
+    - Judah's family's worldliness - Genesis 38: genesis-38
     - Rachel's dual-mindedness - Genesis 31: genesis-31
     - Esau dual-mindedness - Genesis 36: genesis-36
     - Consequences from being double minded - Numbers 32: numbers-32
