--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "next-starter-jamstack",
   "version": "0.1.0",
+  "packageManager": "yarn@1.22.21",
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build && next export",
