Update Psalm <= 102 and topics yml

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -15,7 +15,8 @@ Faith:
     - Elisha's faith against the Aramean army - 2 Kings 6: 2-kings-6
     - Hezekiah's faith against the Assyrian army - 2 Chronicles 32: 2-chronicles-32
     - Job's enduring faith, despite losing everything - Job 1: job-1
-    - Signs of a person of faith – Psalm 27: psalm-27
+    - Signs of a person of faith - Psalm 27: psalm-27
+    - Transforming doubt into faith - Psalm 73: psalm-73
   Patience:
     - Abraham's 100-year wait for God's promised son - Genesis 21: genesis-21
     - Isaac's 20-year wait for his promised son - Genesis 25: genesis-25
@@ -26,6 +27,7 @@ Faith:
     - Samuel instructed Saul 7 days to wait to be king - 1 Samuel 10: 1-samuel-10
     - Elijah forced to wait on God's timing - 1 Kings 17: 1-kings-17
     - Hezekiah's failure to wait on God's timing - 2 Kings 18: 2-kings-18
+    - Waiting on God during times of trouble - Psalm 62: psalm-62
   God's Testing:
     - God tests Abraham's faith - Genesis 12: genesis-12
     - God tests Isaac's faith - Genesis 26: genesis-26
@@ -48,7 +50,14 @@ Faith:
     - Job's testing (Part II) - Job 2: job-2
     - What God offers during your testing and trials (Part I) - Psalm 13: psalm-13
     - What God offers during your testing and trials (Part II)- Psalm 25: psalm-25
-    - Maintaining your faith during a trial – Psalm 31: psalm-31
+    - Maintaining your faith during a trial - Psalm 31: psalm-31
+    - Turning to God during your trials - Psalm 57: psalm-57
+    - How to approach God during a trial - Psalm 59: psalm-59
+    - Finding satisfaction in God during a trial - Psalm 63: psalm-63
+    - What Jesus offers during a trial - Psalm 69: psalm-69
+    - Turning to Jesus during a trial - Psalm 70: psalm-70
+    - Turning to God to overcome a trial - Psalm 74: psalm-74
+    - What God offers during a trial - Psalm 86: psalm-86
   Hope and Comfort During Death, Suffering or Tragedy:
     - Eternal hope following Sara's death - Genesis 23: genesis-23
     - Jacob's request to be buried in the Promised Land - Genesis 47: genesis-47
@@ -63,13 +72,15 @@ Faith:
     - What Jesus offers you during trials - Job 30: job-30
     - How to respond when evil appears to succeed - Psalm 10: psalm-10
     - What God offers when you are filled with fear or worry - Psalm 11: psalm-11
-    - How to respond when evil appears to succeed – Psalm 10: psalm-10
-    - What God offers when you are filled with fear or worry – Psalm 11: psalm-11
-    - The faith to overcome discouragement – Psalm 42: psalm-42
-    - What God offers in your darkness – Psalm 43: psalm-43
-    - Turing to God when evil surrounds you – Psalm 52: psalm-52
-    - Turning to God when you are betrayed – Psalm 55: psalm-55
-    - What God offers when you are trapped in darkness – Psalm 56: psalm-56
+    - How to respond when evil appears to succeed - Psalm 10: psalm-10
+    - What God offers when you are filled with fear or worry - Psalm 11: psalm-11
+    - The faith to overcome discouragement - Psalm 42: psalm-42
+    - What God offers in your darkness - Psalm 43: psalm-43
+    - Turing to God when evil surrounds you - Psalm 52: psalm-52
+    - Turning to God when you are betrayed - Psalm 55: psalm-55
+    - What God offers when you are trapped in darkness - Psalm 56: psalm-56
+    - Praising Jesus when you feel overwhelmed - Psalm 61: psalm-61
+    - Turning to God when you feel depressed - Psalm 88: psalm-88
 Spiritual Renewal:
   Spiritual Renewal / Transformation:
     - God transforms Abraham and Sara - Genesis 17: genesis-17
@@ -97,6 +108,7 @@ Spiritual Renewal:
     - The stages of spiritual renewal / restoration - Job 42: job-42
     - Signs of a transformed believer (Part I) - Psalm 15: psalm-15
     - Signs of a transformed believer (Part I) - Psalm 16: psalm-16
+    - Lessons for a nation’s spiritual revival and restoration - Psalm 85: psalm-85
   Humility / Meekness:
     - Jacob's humility before God - Genesis 31: genesis-31
     - Moses' humility before God - Numbers 11: numbers-12
@@ -223,7 +235,10 @@ Discipleship:
     - Things God desires from you (Part II) - 1 Chronicles 29: 1-chronicles-29
     - Things God desires from you (Part III) - 2 Chronicles 19: 1-chronicles-19
     - Blessings from a Covenant Relationship (Part I) - Psalm 1: psalm-1
-    - Blessings from a Covenant Relationship (Part II) – Psalm 41: psalm-41
+    - Blessings from a Covenant Relationship (Part II) - Psalm 41: psalm-41
+    - Maintaining your walk with Jesus (Part I) - Psalm 71: psalm-71
+    - Maintaining your walk with Jesus (Part II) - Psalm 81: psalm-81
+    - What Jesus desires from you - Psalm 96: psalm-96
 Relationships:
   Dating:
     - The search for Isaac's godly spouse - Genesis 24: genesis-24
@@ -297,6 +312,8 @@ Relationships:
     - Lessons from Job on grief counseling (Part I) - Job 4: job-4
     - Lessons from Job on grief counseling (Part II) - Job 8: job-8
     - Lessons from Job on grief counseling (Part III) - Job 11: job-11
+    - Turning to God when you feel depressed (Part I) - Psalm 77: psalm-77
+    - Turning to God when you feel depressed (Part II) - Psalm 88: psalm-88
 Service:
   Love and Compassion:
     - Abraham's compassion for strangers - Genesis 18: genesis-18
@@ -375,6 +392,8 @@ Leadership:
     - Warnings from Rehoboam and Jeroboam on foolish leaders - 1 Kings 12: 1-kings-12
     - Warnings regarding rebellious leaders - 1 Kings 15: 1-kings-15
     - Lessons on leadership from Amaziah and Jeroboam II's mistakes - 2 Kings 14: 2-kings-14
+    - Lessons on leadership from Israel’s sinful leaders - Psalm 82: psalm-82
+    - Jesus offers when wicked rulers oppress you - Psalm 94: psalm-94
 Prayer:
   Prayer:
     - Abraham prayers for Sodom and Gomorrah -  Genesis 18: genesis-18
@@ -425,6 +444,12 @@ Worship:
     - David's lessons on the reasons to praise God (Part I) - Psalm 18: psalm-18
     - David's lessons on the reasons to praise God (Part II)- Psalm 19: psalm-19
     - David's lessons on the reasons to praise God (Part III)- Psalm 21: psalm-21
+    - Reasons to praise Jesus (Part I) - Psalm 67: psalm-67
+    - Reasons to praise Jesus (Part II) - Psalm 68: psalm-68
+    - Reason to worship God corporately (Part I) - Psalm 92: psalm-92
+    - Reason to worship God corporately (Part II) - Psalm 93: psalm-93
+    - Lessons for properly worshiping God (Part I) - Psalm 95: psalm-95
+    - Lessons for properly worshiping God (Part II) - Psalm 100: psalm-100
 Spiritual Warfare:
   Lessons on Spiritual Warfare:
     - Spiritual warfare lessons from the wilderness - Numbers 1:5-16: numbers-1.5-16
@@ -441,6 +466,7 @@ Spiritual Warfare:
     - Spiritual warfare lessons from Nehemiah (Part XII) - Nehemiah 4: nehemiah-4
     - Spiritual warfare lessons from Nehemiah (Part XIII) - Nehemiah 6: nehemiah-6
     - Spiritual warfare in the Book of Esther - Esther 4: esther-4
+    - Turning spiritual setbacks into victories - Psalm 60: psalm-60
 Stewardship:
   Lessons on Tithing:
     - "Abraham's tithes - Genesis 14": genesis-14
@@ -481,6 +507,7 @@ Jesus in the Old Testament:
     - The foreshadow of Jesus as the Suffering Servant - Psalm 22: psalm-22
     - The foreshadow of Jesus as the Good Shepherd - Psalm 23: psalm-23
     - The foreshadow of Jesus as the King of Glory - Psalm 24: psalm-24
+    - The foreshadow of Jesus as the King of Kings - Psalm 72: psalm-72
 Attributes of God:
   God's Old Testament Covenants:
     - The Noah Covenant - Genesis 9: genesis-9
@@ -504,6 +531,7 @@ Attributes of God:
     - God's faithfulness in preserving David's line in exile - 2 Kings 25: 2-kings-25
     - God's faithfulness in restoring the Jews to Israel - 2 Chronicles 36: 2-chronicles-36
     - God's faithfulness in freeing the Jews from captivity - Ezra 1: ezra-1
+    - Lessons about God from the Davidic Covenant - Psalm 89: psalm-89
   God's Mercy and Grace:
     - God's mercy and grace on Jacob's family - Genesis 49: genesis-49
     - God's mercy and grace after the Jews six rebellions - Exodus 17: exodus-17
@@ -523,8 +551,8 @@ Attributes of God:
     - God's mercy and grace from His selection of the Davidic kings - 1 Chronicles 3: 1-chronicles-3
     - God's grace in selecting Esther and Mordecai - Esther 2: esther-2
     - David's example, the mercy and grace that God offers - Psalm 6: psalm-6
-    - How to respond to God’s mercy – Psalm 31: psalm-31
-    - God’s mercy and grace in response to our sins – Psalm 36: psalm-36
+    - How to respond to God’s mercy - Psalm 31: psalm-31
+    - God’s mercy and grace in response to our sins - Psalm 36: psalm-36
   God's Justice:
     - Principles of divine justice (Part I) - Exodus 21: exodus-21
     - Principles of divine justice (Part I) - Exodus 22: exodus-22
@@ -563,9 +591,12 @@ Attributes of God:
     - God delivers David based on his faith - Psalm 3: psalm-3
     - How to respond when attacked (Part I) - Psalm 4: psalm-4
     - How to Respond when attacked (Part I) -Psalm 9: psalm-9
-    - Seeking God’s deliverance (Part I) – Psalm 34: psalm-34
-    - Seeking God’s deliverance (Part II) – Psalm 40: psalm-40
-    - Seeking God’s deliverance (Part III) – Psalm 54: psalm-54
+    - Seeking God’s deliverance (Part I) - Psalm 34: psalm-34
+    - Seeking God’s deliverance (Part II) - Psalm 40: psalm-40
+    - Seeking God’s deliverance (Part III) - Psalm 54: psalm-54
+    - God’s deliverance (Part IV) - Psalm 83: psalm-83
+    - What Jesus offers when people attack you - Psalm 64: psalm-64
+    - What God is owed because of His deliverance - Psalm 76: psalm-76
   God's Holiness:
     - Honoring God's holiness with a holy life - Leviticus 19: leviticus-19
     - Keeping God's names holy - Deuteronomy 5:11: deuteronomy-5.11
@@ -597,6 +628,11 @@ Attributes of God:
     - Through Elisha, God miraculously provides for His people - 2 Kings 4: 2-kings-4
     - Unconditional and conditional blessings that God offers - 2 Chronicles 17: 2-chronicles-17
     - God's provision for the Jews in building the second Temple - Ezra 6: ezra-6
+    - The blessing available through faith in Jesus - Psalm 65: psalm-65
+    - Leading a life full of God’s blessings - Psalm 84: psalm-84
+    - The blessings of God’s love - Psalm 90: psalm-90
+    - The blessing of trusting God - Psalm 91: psalm-91
+    - The blessings that Jesus offers everyone - Psalm 98: psalm-98
   God's Gift of Wisdom:
     - Lessons regarding God's wisdom from Solomon - 1 Kings 3: 1-kings-3
     - Lessons on using God's wisdom to lead - 1 Kings 4: 1-kings-4
@@ -635,7 +671,7 @@ Attributes of God:
     - God judges the Assyrians - 2 Kings 19: 2-kings-19
     - God judges Judah with invasion - 2 Kings 24: 2-kings-24
     - God judges Judah with exile - 2 Kings 25: 2-kings-25
-    - How to respond to God’s discipline – Psalm 39: psalm-39
+    - How to respond to God’s discipline - Psalm 39: psalm-39
 Apologetics:
   Apologetics Regarding Creation:
     - The days of Genesis explained - Genesis 1(a)(1): genesis-1a.1
@@ -682,9 +718,11 @@ End Times:
     - End time revelations from the kings of Israel and Judah - 2 Kings 15: 2-kings-15
     - God's judgement of Satan/Leviathan - Job 41: job-41
     - End time revelation of the rebellion against Jesus - Psalm 2: psalm-2
-    - Jesus’ protection for believers during the Great Tribulation – Psalm 46: psalm-46
-    - The Enthronement of Jesus as The King of Kings – Psalm 47: psalm-47
-    - Jesus’ Reign at Mount Zion – Psalm 47: psalm-47
+    - Jesus’ protection for believers during the Great Tribulation - Psalm 46: psalm-46
+    - The Enthronement of Jesus as The King of Kings - Psalm 47: psalm-47
+    - Jesus’ Reign at Mount Zion - Psalm 87: psalm-87
+    - Praising Jesus’ promised return as King of Kings - Psalm 97: psalm-97
+    - Jesus’ Promised Millennial Reign - Psalm 99: psalm-99
   The Rapture of the Church:
     - Enoch's rapture - Genesis 5: genesis-5
     - The rapture foreshadowed in the Egyptian plagues - Exodus 11: exodus-11
@@ -698,6 +736,8 @@ Sin:
     - Lessons on how sin spreads - Judges 18: judges-18
     - Causes and consequences of rebellion - Numbers 16: numbers-16
     - Signs of a foolish sinner - Psalm 14: psalm-14
+    - Avoiding Israel’s seven deadly sins - Psalm 78: psalm-78
+    - What Jesus offers those trapped in sin - Psalm 80: psalm-80
   Pride / Vanity:
     - Miriam's pride leads to leprosy - Numbers 12: numbers-12
     - Lessons from Gideon on the dangers of pride- Judges 8: judges-8
@@ -710,6 +750,7 @@ Sin:
     - King Sennacherib's pride before God - 2 Kings 19: 2-kings-19
     - From Uzziah, seven warnings regarding pride - 2 Chronicles 26: 2-chronicles-26
     - Warnings from Haman and Xerxes regarding pride - Esther 3: esther-3
+    - Lessons for avoiding pride in your walk - Psalm 75: psalm-75
   Covetousness, Jealousy, Lust and Greed:
     - Laban covets and tries to steal Jacob's blessings - Genesis 29: genesis-29
     - Reuben's sleeps with of his father's concubine -  Genesis 35: genesis-35
@@ -766,8 +807,9 @@ Sin:
     - Judah's leaders doubt God and turn to Egypt - 2 Kings 24: 2-kings-24
     - Satan's use of discouragement to delay the Temple - Ezra 4: ezra-4
     - Satan's use of discouragement against Nehemiah - Nehemiah 4: nehemiah-4
-    - The faith to overcome discouragement – Psalm 42: psalm-42
-    - The dangers of doubting or denying God – Psalm 53: psalm-53
+    - The faith to overcome discouragement - Psalm 42: psalm-42
+    - The dangers of doubting or denying God - Psalm 53: psalm-53
+    - Overcoming doubt doubt in your walk with God - Psalm 73: psalm-73
   Cruelty / Strife / Oppression:
     - Joseph's brothers sell him into slavery - Genesis 37: genesis-37
     - Judah's threat to burn Tamar - Genesis 38: genesis-38
@@ -801,7 +843,7 @@ Sin:
   Dual-Mindedness /Compromise/ Worldliness:
     - Lot's family's worldliness - Genesis 19: genesis-19
     - Jacob's family's worldliness - Genesis 34: genesis-34
-    - Judah's family's worldliness - Genesis 38: genesis-38
+    - Judah's family's worldliness  - Genesis 38: genesis-38
     - Rachel's dual-mindedness - Genesis 31: genesis-31
     - Esau dual-mindedness - Genesis 36: genesis-36
     - Consequences from being double minded - Numbers 32: numbers-32
