--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -91,3 +91,5 @@ psalm-3:
   videoSrc: https://www.youtube.com/embed/rUKrPSLnKuo
 psalm-4:
   videoSrc: https://www.youtube.com/embed/9aGb1TeB7M0
+psalm-5:
+  videoSrc: https://www.youtube.com/embed/fpstadXT8rE
