--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -93,3 +93,9 @@ psalm-4:
   videoSrc: https://www.youtube.com/embed/9aGb1TeB7M0
 psalm-5:
   videoSrc: https://www.youtube.com/embed/fpstadXT8rE
+psalm-6:
+  videoSrc: https://www.youtube.com/embed/wXqCyTZe0RQ
+psalm-7:
+  videoSrc: https://www.youtube.com/embed/e9GGvYbmKsU
+psalm-8:
+  videoSrc: https://www.youtube.com/embed/VRs9oWTh32o
