Add videoSrc links up to psalm14

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -99,3 +99,15 @@ psalm-7:
   videoSrc: https://www.youtube.com/embed/e9GGvYbmKsU
 psalm-8:
   videoSrc: https://www.youtube.com/embed/VRs9oWTh32o
+psalm-9:
+  videoSrc: https://www.youtube.com/embed/w6Ohwvdxrh8
+psalm-10:
+  videoSrc: https://www.youtube.com/embed/lQEoTcOt_TQ
+psalm-11:
+  videoSrc: https://www.youtube.com/embed/TaGqWtS42l4
+psalm-12:
+  videoSrc: https://www.youtube.com/embed/KW-jiTzVAvY
+psalm-13:
+  videoSrc: https://www.youtube.com/embed/ckw-i5zTCD0
+psalm-14:
+  videoSrc: https://www.youtube.com/embed/q6LnUsOJbEI
