--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -247,7 +247,7 @@ Discipleship:
     - Maintaining your walk with Jesus (Part I) - Psalm 71: psalm-71
     - Maintaining your walk with Jesus (Part II) - Psalm 81: psalm-81
     - What Jesus desires from you - Psalm 96: psalm-96
-    - Living a righteous life for God - Psalm 101
+    - Living a righteous life for God - Psalm 101: psalm-101
 Relationships:
   Dating:
     - The search for Isaac's godly spouse - Genesis 24: genesis-24
@@ -256,7 +256,6 @@ Relationships:
     - Joseph flees temptation - Genesis 39: genesis-39
     - God's laws regarding sexual purity - Leviticus 18: leviticus-18
     - Phinehas' zeal in removing sexual impurity - Numbers 25: numbers-25
-    # - God's law against being unequally yoked - Deuteronomy 7: deuteronomy-7
     - Joshua's warning against marrying nonbelievers - Joshua 23: joshua-23
     - Samson's lust for a pagan woman - Judges 14: joshua-14
     - Samson sleeps with a Philistine prostitute - Judges 16: joshua-16
