Update up to Psalm19 videos

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -111,3 +111,13 @@ psalm-13:
   videoSrc: https://www.youtube.com/embed/ckw-i5zTCD0
 psalm-14:
   videoSrc: https://www.youtube.com/embed/q6LnUsOJbEI
+psalm-15:
+  videoSrc: https://www.youtube.com/embed/xAI4C3p-S48
+psalm-16:
+  videoSrc: https://www.youtube.com/embed/e5MFM9rRlwg
+psalm-17:
+  videoSrc: https://www.youtube.com/embed/ED2mzUnNERE
+psalm-18:
+  videoSrc: https://www.youtube.com/embed/79BxxTxUbwo
+psalm-19:
+  videoSrc: https://www.youtube.com/embed/dxuftK4jdLc
