--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -121,3 +121,9 @@ psalm-18:
   videoSrc: https://www.youtube.com/embed/79BxxTxUbwo
 psalm-19:
   videoSrc: https://www.youtube.com/embed/dxuftK4jdLc
+psalm-20:
+  videoSrc: https://www.youtube.com/embed/TkXTsZ2Hq1Q
+psalm-21:
+  videoSrc: https://www.youtube.com/embed/LbbVMnLOru4
+psalm-22:
+  videoSrc: https://www.youtube.com/embed/oYVj5qNFKIw
