Add psalm-23-24 videoSrc

--- a/lib/study_metadata.yml
+++ b/lib/study_metadata.yml
@@ -127,3 +127,7 @@ psalm-21:
   videoSrc: https://www.youtube.com/embed/LbbVMnLOru4
 psalm-22:
   videoSrc: https://www.youtube.com/embed/oYVj5qNFKIw
+psalm-23:
+  videoSrc: https://www.youtube.com/embed/rXq87rIyR_k
+psalm-24:
+  videoSrc: https://www.youtube.com/embed/KZqZFkJez94
